syntax = "proto3";

package pb;

option go_package = "internal/pb;pb";

message CreateUserRequest {
    string email = 1;
}
